[metadata]
name = cybereason
version = attr: cybereason.__version__
author = Nuno André
author_email = mail@nunoand.re
url = https://github.com/forensic-security/cybereason
description = Unofficial Cybereason API client
long_description = file: readme.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license-file = LICENSE
platform = any
keywords = cybereason, cybersecurity
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Framework :: AsyncIO
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Security
    Typing :: Typed
project_urls =
    Source = https://github.com/forensic-security/cybereason
    Bug Tracker = https://github.com/forensic-security/cybereason/issues

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.6
package_dir =
    =src
packages = find:
setup_requires =
    setuptools >= 40.9.0
    wheel >= 0.32
install_requires =
    httpx
    nest-asyncio

[options.packages.find]
where = src

[options.package_data]
cybereason =
    py.typed

[options.extras_require]
dev =
    flake8
    mypy
    pytest
    pytest-asyncio
    pytest-dependency
docs =
    sphinx
    sphinx-rtd-theme

[flake8]
ignore = E221, E241
exclude =
    .git,
    __pycache__,
    .mypy_cache,
    .pytest_cache,
max-complexity = 10
inline-quotes = '
multiline-quotes = '''
docstring-quotes = '''
