[metadata]
name = cybereason
version = attr: cybereason.__version__
author = Nuno André
author_email = mail@nunoand.re
url = https://github.com/forensic-security/cybereason#readme
description = Async Cybereason API client
long_description = file: readme.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
platform = any
keywords = cybereason, cybersecurity, security, edr
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Framework :: AsyncIO
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Security
    Typing :: Typed
project_urls =
    Source = https://github.com/forensic-security/cybereason
    Bug Tracker = https://github.com/forensic-security/cybereason/issues

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7
package_dir =
    =src
packages = find:
setup_requires =
    setuptools >= 40.9.0
    wheel >= 0.32
install_requires =
    httpx>=0.22.0
    nest-asyncio

[options.packages.find]
where = src

[options.package_data]
cybereason =
    py.typed

[options.extras_require]
zip =
    pyzipper
socks =
    ; socksio==1.*
    httpx-socks[asyncio]
dev =
    mypy
    flake8
    pytest
    pyyaml
    pytest-asyncio
    # pytest-dependency
    pytest-datafiles
    # validators:
    jsonschema
    fqdn
    rfc3339-validator
    isoduration
    idna
    rfc3987
docs =
    sphinx
    sphinx-rtd-theme

[flake8]
ignore = E221, E241, E402, E731
exclude =
    .git,
    __pycache__,
    .mypy_cache,
    .pytest_cache,
    _typing.py
inline-quotes = single
max-complexity = 13
max-line-length = 99
multiline-quotes = single
docstring-quotes = single

[mypy]
ignore_missing_imports = True
